# sphinx_repo_manager

./: .bumpversion.cfg  .editorconfig  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .readthedocs.yaml.bak  CONTRIBUTORS  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES.rst  config.toml  demo.txt  docs.code-workspace  environment.yml  make.bat  package.json  pyproject.toml  repo_manifest.yml  requirements-dev.txt  requirements-install.ps1  requirements.txt  start-docker.ps1  start-legacy.ps1  stop-docker.ps1
.devcontainer/: Dockerfile.dev  devcontainer.json
.gitlab/: xbe-docs.yml
.run/: sphinx.run.xml
ci/: .docs-ci.yml  xbe-docs.yml
content/: _index.md
docker/: .env  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.doxygen  Dockerfile.sphinx  README.md  docker-compose-preview.yaml  docker-compose.base.yaml  docker-compose.main.yaml  docker-compose.yaml
docs/: .env.template  Makefile  README-src-dev.txt  repo_manifest.yml  requirements-dev.txt  requirements.txt
docs/extensions/sphinx_algolia_crawler/: README.md  pyproject.toml
docs/extensions/sphinx_algolia_crawler/sphinx_algolia_crawler/: __init__.py  sphinx_algolia_crawler.py
docs/extensions/sphinx_feature_flags/: pyproject.toml
docs/extensions/sphinx_feature_flags/sphinx_feature_flags/: __init__.py  sphinx_feature_flags.py
docs/extensions/sphinx_image_min/: README.md  pyproject.toml
docs/extensions/sphinx_image_min/sphinx_image_min/: __init__.py  sphinx_image_min.py
docs/extensions/sphinx_openapi/: pyproject.toml
docs/extensions/sphinx_openapi/sphinx_openapi/: __init__.py  sphinx_openapi.py
docs/extensions/sphinx_repo_manager/: README.md  pyproject.toml
docs/extensions/sphinx_repo_manager/sphinx_repo_manager/: __init__.py  git_helper.py  sphinx_repo_manager.py
notebooks/: DockerTesting.ipynb  GitStatus.ipynb  Setup.ipynb
source/: commerce.rst  conf.py  content.rst  demo.rst  eula.md  features.rst  gameplay.rst  index.rst  index.rst.bak  multiplayer.rst  social.rst  test1.rst  test2.rst  toc.txt  tools.rst
sphinx_repo_manager/: __init__.py  api_reference.py  git_helper.py  sphinx_repo_manager.py
templates/: README.txt  repo_manifest.template.yml
tests/: test_integration.py
tools/: .env.template  .gitlab-ci.yml  1_bump-ver.ps1  2_build-lint.ps1  3a_deploy-to-test.ps1  3b_deploy-to-prod.ps1  README.md  admin-enable-long-file-paths.ps1  clean-build.ps1  clean-cache.ps1  common.ps1  conda-activate.ps1  conda-destroy.ps1  docker-build.ps1  docker-destroy.ps1  docker-start.ps1  (+11 more)
(+759 files in other folders)
