[tool.poetry]
name = "sphinx_feature_flags"
version = "1.0.0"
description = "This Sphinx extension allows for the `feature-flag` directive to hide/show content based on build-time flags."
authors = ["Xsolla Backend <xbe@xsolla.com>"]
license = "All Rights Reserved"

[tool.poetry.dependencies]
python = "3.10"
sphinx = "7.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
