[tool.poetry]
name = "sphinx_repo_manager"
version = "1.0.0"
description = "Sphinx extension automates the management of multiple documentation repositories as part of building a larger, unified documentation system"
authors = ["Xsolla Backend <xbe@xsolla.com>"]
license = "All Rights Reserved"

[tool.poetry.dependencies]
python = "3.10"
sphinx = "7.3.7"
colorama = "^0.4.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
